--- a/site/shop/podutct-card.html
+++ b/site/shop/podutct-card.html
@@ -20,14 +20,10 @@
                 <p class="price">499.99$</p>
             </div>
             <div class="buy-container">
-                <div
-                    class="add-to-cart-button show-when-empty button medium-size red"
-                >
+                <div class="add-to-cart-button show-when-empty button medium-size red">
                     <span class="button-text">Добавить</span>
                 </div>
-                <div
-                    class="small-button minus-cart-button hide-when-empty white-button"
-                >
+                <div class="small-button minus-cart-button hide-when-empty white-button">
                     <span class="small-button-text"
                         ><svg
                             style="margin: 18px 10px"
@@ -51,11 +47,9 @@
                 </div>
                 <p class="cart-counter hide-when-empty">0</p>
                 <!-- <button class="plus-cart-button hide-when-empty">+</button> -->
-                <div
-                    class="small-button plus-cart-button hide-when-empty white-button"
-                >
-                    <span class="small-button-text"
-                        ><svg
+                <div class="small-button plus-cart-button hide-when-empty white-button">
+                    <span class="small-button-text">
+                        <svg
                             style="margin: 9px"
                             width="22"
                             height="22"
@@ -86,8 +80,8 @@
             </div>
         </div>
         <div class="remove-from-cart small-button hide-when-empty red-button">
-            <span class="small-button-text"
-                ><svg
+            <span class="small-button-text">
+                <svg
                     style="margin: 10px"
                     id="Layer_1"
                     data-name="Layer 1"
@@ -109,8 +103,9 @@
                     </defs>
                     <title>cross</title>
                     <line class="cls-1" x1="2" y1="22" x2="22" y2="2" />
-                    <line class="cls-1" x1="2" y1="2" x2="22" y2="22" /></svg
-            ></span>
+                    <line class="cls-1" x1="2" y1="2" x2="22" y2="22" />
+                </svg>
+            </span>
         </div>
     </div>
 </body>
