added class "return" to button

--- a/site/cart/podutct-card.html
+++ b/site/cart/podutct-card.html
@@ -21,7 +21,7 @@
             </div>
             <div class="buy-container">
                 <div
-                    class="button white-button undo-button add-to-cart-button show-when-empty"
+                    class="button white-button undo-button add-to-cart-button show-when-empty return"
                     style="display: none"
                 >
                     <span class="small-button-text">вернуть</span>
