--- a/site/cart/podutct-card.html
+++ b/site/cart/podutct-card.html
@@ -47,7 +47,9 @@
                     </svg>
                 </div>
                 <!-- <button class="minus-cart-button hide-when-empty">-</button> -->
-                <div class="small-button minus-cart-button hide-when-empty white-button">
+                <div
+                    class="small-button minus-cart-button hide-when-empty white-button"
+                >
                     <span class="small-button-text">
                         <svg
                             style="margin: 18px 10px"
@@ -71,7 +73,9 @@
                 </div>
                 <p class="cart-counter hide-when-empty">0</p>
                 <!-- <button class="plus-cart-button hide-when-empty">+</button> -->
-                <div class="small-button plus-cart-button hide-when-empty white-button">
+                <div
+                    class="small-button plus-cart-button hide-when-empty white-button"
+                >
                     <span class="small-button-text">
                         <svg
                             style="margin: 9px"
