--- a/site/thanks/index.html
+++ b/site/thanks/index.html
@@ -14,7 +14,10 @@
             <h1>Спасибо!</h1>
             <h1>Ваш заказ оформлен</h1>
             <p>*но это не точно</p>
-            <div onclick="document.location='/shop/index.html'" class="button medium-size red">
+            <div
+                onclick="document.location='/shop/index.html'"
+                class="button medium-size red"
+            >
                 <span class="button-text"> < < в магазин</span>
                 <!-- &#60 &#60  -->
             </div>
