--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -82,7 +82,10 @@
             </div> -->
 
                 <div>
-                    <a class="vector-icon" href="../account/index.html">
+                    <a
+                        class="vector-icon redirect-to-login-if-guest"
+                        href="../account/index.html"
+                    >
                         <svg
                             width="24"
                             height="24"
