--- a/site/account/index.html
+++ b/site/account/index.html
@@ -20,7 +20,27 @@
             </div>
 
             <nav class="flex-container account">
-                <div onclick="history.back();" class="button medium-size red">
+                <!-- <div onclick="history.back();" class="button medium-size red"> -->
+                <div
+                    onclick="if (String(document.referrer).includes('authorization')) {
+                        function getCookie(name) {
+  const value = `; ${document.cookie}`;
+  const parts = value.split(`; ${name}=`);
+  if (parts.length === 2) return parts.pop().split(';').shift();
+}
+                        const backAddress=getCookie('backTo')
+                        document.cookie = 'backTo=; Max-Age=0; path=/;';
+                        if (!backAddress) {
+                            document.location = `/shop/`
+                        return;
+                        } 
+
+                        document.location = `/${backAddress}/`
+                        return;
+                        }
+                        history.go(-1) "
+                    class="button medium-size red"
+                >
                     <span class="button-text"> < < назад </span>
                     <!-- &#60 &#60  -->
                 </div>
