--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -83,7 +83,7 @@
                 <!-- <input type="text" /> -->
 
                 <div class="vsible-when-logged-in">
-                    <span>привет, </span><span class="username"></span>
+                    <span>Привет, </span><span class="username"></span>
                 </div>
 
                 <div>
