--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -75,7 +75,7 @@
             <nav class="shop-main-navbar">
                 <p class="title">Магазин</p>
                 <div class="vsible-when-logged-in">
-                    <span>привет, </span><span class="username"></span>
+                    <span>Привет, </span><span class="username"></span>
                 </div>
                 <!-- <div>
                 <a href="../index.html">главная</a>
@@ -259,7 +259,7 @@
                 </div>
             </nav>
             <div class="product-type-filter">
-                <a id="all" class="active" href="#">все</a>
+                <a id="all" class="active" href="#">Все</a>
                 <!-- cписок типов -->
             </div>
         </header>
@@ -269,7 +269,7 @@
             </div>
             <div class="shop-sidebar">
                 <form class="product-brand-filter frame">
-                    фильтр:
+                    Фильтр по брендам:
                     <br />
                     <!-- cписок брендов -->
                 </form>
