added error for empty cart checkout

--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -261,10 +261,7 @@
                             <button class="buy-button">оформить</button>
                         </div>
                     </a> -->
-                    <div
-                        onclick="document.location='/thanks/index.html'"
-                        class="button medium-size red"
-                    >
+                    <div class="button medium-size red checkout">
                         <span class="button-text">Оформить</span>
                     </div>
                 </div>
@@ -276,5 +273,10 @@
             <p>8-800-23-11-777(с 08:00 до 22:00)</p>
         </div>
     </body>
+    <div class="error-popup">
+        <div class="inner-popup" style="padding: 0px 20px">
+            <p>корзина пуста</p>
+        </div>
+    </div>
     <script src="./cart-script.js" type="module"></script>
 </html>
