added validation of nick, mail, firs & second name

--- a/site/cart/index.html
+++ b/site/cart/index.html
@@ -120,6 +120,7 @@
                     <!-- <a href="../authorization/index.html">авторизация</a> -->
                     <a href="../authorization/index.html?next=cart">
                         <svg
+                            style="transform: rotate(180deg)"
                             id="Layer_1"
                             data-name="Layer 1"
                             xmlns="http://www.w3.org/2000/svg"
