--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -151,6 +151,7 @@
                     <!-- <a href="../authorization/index.html">авторизация</a> -->
                     <a href="../authorization/index.html">
                         <svg
+                            style="transform: rotate(180deg)"
                             id="Layer_1"
                             data-name="Layer 1"
                             xmlns="http://www.w3.org/2000/svg"
