--- a/site/account/index.html
+++ b/site/account/index.html
@@ -4,7 +4,7 @@
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="stylesheet" href="../assets/styles.css" />
+        <link rel="stylesheet" href="acc-styles.css" />
         <title>Document</title>
     </head>
 
@@ -49,15 +49,19 @@
             <div class="user-info">
                 <p>Никнейм:</p>
                 <div class="login-name frame-inset">
-                    <p>Никнейм</p>
+                    <p></p>
                 </div>
-                <p>Ф.И.О :</p>
+                <p>Имя:</p>
                 <div class="first-name frame-inset">
-                    <p>Иванов Иван Иванович</p>
+                    <p></p>
+                </div>
+                <p>Фамилия:</p>
+                <div class="second-name frame-inset">
+                    <p></p>
                 </div>
                 <p>E-mail:</p>
                 <div class="e-mail frame-inset">
-                    <p>test@test.com</p>
+                    <p></p>
                 </div>
             </div>
         </div>
