--- a/site/account/index.html
+++ b/site/account/index.html
@@ -63,6 +63,10 @@
                 <div class="e-mail frame-inset">
                     <p></p>
                 </div>
+                <p>Дата регистрации:</p>
+                <div class="reg-date frame-inset">
+                    <p></p>
+                </div>
             </div>
         </div>
 
