greetings on title screen change if logged in

--- a/site/index.html
+++ b/site/index.html
@@ -9,7 +9,7 @@
 
     <body>
         <div class="frame title-screen">
-            <h1>Welcome to</h1>
+            <h1 class="greetings">Welcome to</h1>
             <!-- <img class="logo" src="assets/images/main-logo.png" alt="Логотип магазина" /> -->
             <svg
                 class="animated-logo"
@@ -97,10 +97,7 @@
                 </div>
             </div>
             <div class="button-container flex-container">
-                <div
-                    class="button medium-size red"
-                    onclick="document.location='/shop/index.html'"
-                >
+                <div class="button medium-size red" onclick="document.location='/shop/index.html'">
                     <span class="button-text">Магазин</span>
                 </div>
                 <div
@@ -112,5 +109,5 @@
             </div>
         </div>
     </body>
-    <!-- <script src="index.js" type="module"></script> -->
+    <script src="index.js" type="module"></script>
 </html>
