--- a/site/index.html
+++ b/site/index.html
@@ -97,7 +97,10 @@
                 </div>
             </div>
             <div class="button-container flex-container">
-                <div class="button medium-size red" onclick="document.location='/shop/index.html'">
+                <div
+                    class="button medium-size red"
+                    onclick="document.location='/shop/index.html'"
+                >
                     <span class="button-text">Магазин</span>
                 </div>
                 <div
