--- a/site/account/index.html
+++ b/site/account/index.html
@@ -9,8 +9,7 @@
     </head>
 
     <body class="account-body">
-        <div
-            class="flex-container flex-align-center content justify-content-center column"
+        <div class="flex-container flex-align-center content justify-content-center column"
         >
             <div class="small-logo">
                 <img
