add pointer and correct hover text

--- a/site/shop/index.html
+++ b/site/shop/index.html
@@ -149,7 +149,7 @@
                 </div>
                 <div class="vsible-when-logged-out vector-icon">
                     <!-- <a href="../authorization/index.html">авторизация</a> -->
-                    <a href="../authorization/index.html">
+                    <a class="vector-icon" href="../authorization/index.html">
                         <svg
                             style="transform: rotate(180deg)"
                             id="Layer_1"
@@ -173,7 +173,7 @@
                                     }
                                 </style>
                             </defs>
-                            <title>login_esport</title>
+                            <title>Войти</title>
                             <line
                                 class="cls-2"
                                 x1="26"
@@ -204,7 +204,7 @@
                 </div>
 
                 <div class="vsible-when-logged-in">
-                    <a class="logout-button vector-icon">
+                    <a class="vector-icon logout-button">
                         <!-- <img src="../assets/images/logouticon.png" style="height: 20px" alt="" /> -->
                         <svg
                             id="Layer_1"
@@ -228,7 +228,7 @@
                                     }
                                 </style>
                             </defs>
-                            <title>logout_exp</title>
+                            <title>Выйти</title>
                             <line
                                 class="cls-2"
                                 x1="12"
